--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ShunyUnity1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ShunyUnity1.data.gz",
-        frameworkUrl: buildUrl + "/ShunyUnity1.framework.js.gz",
-        codeUrl: buildUrl + "/ShunyUnity1.wasm.gz",
+        dataUrl: buildUrl + "/ShunyUnity1.data",
+        frameworkUrl: buildUrl + "/ShunyUnity1.framework.js",
+        codeUrl: buildUrl + "/ShunyUnity1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ShunUnity",
